Issue #2. No more horizontal scrollbars from extra padding

--- a/cas-management-webapp/src/main/webapp/css/cas-management.css
+++ b/cas-management-webapp/src/main/webapp/css/cas-management.css
@@ -6817,6 +6817,18 @@ html {
   height: 53px;
   background-color: #aeffa6;
 }
+.casmgmt-app .casmgmt-content .service-editor {
+  display: block;
+}
+.casmgmt-app .casmgmt-content .service-editor > .col-sm-12 {
+  display: block;
+}
+.casmgmt-app .casmgmt-content .service-editor > .col-sm-12 > .col-sm-6:nth-of-type(1) {
+  padding-left: 0;
+}
+.casmgmt-app .casmgmt-content .service-editor > .col-sm-12 > .col-sm-6:nth-of-type(2) {
+  padding-right: 0;
+}
 .casmgmt-app .casmgmt-content .services-summary-table td {
   border-top: none;
 }
